# hired

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml
.claude/commands/: add-adr.md  start-phase.md  verify-phase.md
.claude/specs/: PHASE_10_templates_and_evaluation.md  PHASE_1_foundation.md  PHASE_2_llm_layer.md  PHASE_3_profile.md  PHASE_4_jobs.md  PHASE_5_applications.md  PHASE_6_polish.md  PHASE_9_feedback.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  prompt_regression.md
.github/workflows/: ci.yml  release.yml
backend/: README.md  alembic.ini  hired-sidecar-aarch64-apple-darwin.spec  hired-sidecar.spec  pyproject.toml  scratch.db  sidecar.py  test_cv_direct.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_default_model.py  0003_phase3_profile_and_call_log.py  0004_phase4_jobs_scoring.py  0005_phase5_application_materials.py  0006_profile_phone_skills.py  0007_crawl_sources.py  0008_profile_work_formats.py  0009_update_default_model_haiku.py  0010_add_job_interactions.py  0011_mock_interviews.py  0012_mock_interview_runs.py
backend/api/: __init__.py  dependencies.py  health.py  main.py
backend/api/routes/: applications.py  data.py  jobs.py  profile.py  setup.py  sources.py  stats.py  voice.py
backend/crawler/: __init__.py  base.py  greenhouse.py  indeed.py  lever.py  linkedin.py  location_filter.py  manual_urls.py  pre_filter.py  remotive.py  service.py  stepstone.py  wellfound.py
backend/db/: migrations.py  models.py  session.py
backend/llm/: __init__.py  anthropic_api.py  base.py  claude_code.py  codex_cli.py  credentials.py  errors.py  mock.py  ollama.py  openai_api.py  prompts.py  recorder.py  types.py  usage.py
backend/llm/postprocess/: banned_phrases.txt
backend/prompts/: README.md  evaluate_answer.md  evaluate_mock_interview.md  generate_cover_letter.md  generate_interview_questions.md  generate_mock_interview_questions.md  interview_coach.md  parse_cv.md  research_company.md  score_job.md  summarize_role.md  tailor_cv.md
backend/scripts/: smoke_coach_stream.py
backend/services/: __init__.py  application_service.py  cost_service.py  crawl_progress.py  cv_service.py  generation_progress.py  mock_interview.py  pricing.py  profile_mapper.py  provider_detection.py  provider_setup.py  provider_stats.py  scoring_service.py  source_scheduler.py  voice.py
backend/tests/: conftest.py  test_application_endpoints.py  test_application_service.py  test_claude_code_adapter.py  test_codex_cli_adapter.py  test_cost_tracking.py  test_crawler.py  test_cv_service.py  test_db_session_guard.py  test_error_middleware.py  test_eval_harness.py  test_health.py  test_interview_chat_endpoint.py  test_interview_coach_prompt.py  test_jobs_endpoints.py  test_llm_layer.py  test_migrations.py  test_mock_interview.py  test_ollama_adapter.py  test_openai_layer.py  test_profile_endpoints.py  test_provider_detection.py  test_recorder.py  test_scoring_service.py  test_voice.py
design/: HANDOFF_PHASE_7_FRONTEND_REDESIGN.md
design/Hred.v2/: Hired.html
design/Hred.v2/src/: app.jsx  data.jsx  detail.jsx  feed.jsx  interview.jsx  kanban.jsx  logo.jsx  materials.jsx  onboarding.jsx  primitives.jsx  sidebar.jsx
design/Hred.v2/uploads/: hired_logo_03.html
docs/: CHANGELOG.md  CURRENT_PHASE.md  PHASE_10_VISION.md  PHASE_7_AUTONOMOUS_COMPLETION.md  PROJECT_DOC.md  accessibility-audit.md  api.md  api.openapi.json  architecture.md  midterm-presentation-script.md  ollama-performance.md  postmortem.md  slide-speaking-scripts.md
docs/adr/: 0001-local-first-architecture.md  0005-api-first-llm-provider.md  0006-crawler-fragility.md  0007-multi-provider-rollout.md  0008-phase-7-frontend-redesign.md  0009-phase-8-interactive-coach.md  0010-codex-cli-provider.md  README.md
docs/install/: linux.md  macos.md  windows.md
docs/phases/: PHASE_01.md  PHASE_02.md  PHASE_03.md  PHASE_04.md  PHASE_05.md  PHASE_06.md  PHASE_07.md  PHASE_08.md  PHASE_09.md  PHASE_10.md  PHASE_11.md  PHASE_12.md  PHASE_13.md
eval/: README.md  bias_audit.py  goldset.json  run_eval.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx
frontend/src/applications/: ApplicationDetail.tsx  Dashboard.test.tsx  Dashboard.tsx  GeneratePage.test.tsx  GeneratePage.tsx  InterviewChat.test.tsx  InterviewChat.tsx  InterviewPanel.tsx  InterviewPrep.test.tsx  InterviewPrep.tsx  Interviews.test.tsx  Interviews.tsx  MaterialsScreen.test.tsx  MaterialsScreen.tsx  MockInterviewResults.test.tsx  MockInterviewResults.tsx  MockInterviewRunner.test.tsx  MockInterviewRunner.tsx  mockInterviewTiming.ts  useMicRecorder.test.ts  useMicRecorder.ts  useMockInterviewRunner.test.ts  useMockInterviewRunner.ts  useVoiceRunner.ts  voiceRunnerLogic.test.ts  voiceRunnerLogic.ts
frontend/src/components/: AppGate.test.tsx  AppGate.tsx  CompanyMark.test.tsx  CompanyMark.tsx  FeedbackHistoryScreen.tsx  HealthCheckButton.tsx  MainShell.tsx  MatchRing.test.tsx  MatchRing.tsx  SettingsScreen.tsx  (+8 more)
scripts/: bootstrap.ps1  bootstrap.sh  build_architecture_diagram.py  build_submission_docx.py  gen_openapi.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+34 files in other folders)
