[project]
name = "hired-backend"
version = "0.1.0"
description = "Hired. — local-first AI career agent (FastAPI sidecar)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Benedict Herrnleben" },
]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "httpx>=0.28",
    "pydantic>=2.10",
    "anthropic>=0.40",
    "keyring>=25.0",
    "pypdf>=5.1",
    "python-multipart>=0.0.18",
    "beautifulsoup4>=4.12",
    "playwright>=1.49",
    # Python 3.11 doesn't ship the variant of typing.TypedDict that
    # Pydantic v2 needs; pull it in explicitly even though it's
    # transitively available through pydantic itself.
    "typing-extensions>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    # Phase 6: bundle the FastAPI sidecar into a single binary that
    # Tauri can ship as an externalBin per platform.
    "pyinstaller>=6.10",
]
# M4 voice: local STT (faster-whisper) + TTS (Piper). A dependency-group (not
# an extra) so it can be installed by default via `default-groups` below — a
# plain `uv run` would otherwise strip an opt-in extra on each invocation.
# Models download on first use into ~/.hired/models. The PyInstaller release
# excludes these libs from the bundle (see hired-sidecar.spec), so packaging
# stays lean; bundling voice is a tracked follow-up.
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]

[tool.uv]
# Hired. backend is an application, not a library — uv should install deps
# into a venv and run scripts in place, not build a wheel.
package = false
# Install dev + voice by default so `uv run`/`uv sync` keep faster-whisper +
# Piper present without a flag. Opt out with `uv sync --no-group voice`.
default-groups = ["dev", "voice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]   # auto-generated migration headers

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]
markers = [
    "integration: tests that hit a real LLM provider (skipped by default; run with `pytest -m integration`)",
]
