[package]
name = "hired"
version = "0.5.0"
description = "Hired. — local-first AI career agent (Tauri shell)"
authors = ["Benedict Herrnleben"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hired_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
# Phase 6: spawn the bundled hired-sidecar binary on app start.
tauri-plugin-shell = "2"
# v0.1.1 hotfix: guarantee a single app instance so a relaunch never
# spawns a second sidecar that fights for port 8765.
tauri-plugin-single-instance = "2"
